Reset tools do not synchronize to other linked views #848